migrates chats on go and two types for channels
